src/external/clay/clay.h

// Clay_StringSlice is used to represent non owning string slices, and includes
// a baseChars field which points to the string this slice is derived from.
typedef struct {
    int32_t length;
    const char *chars;
    const char *
        baseChars; // The source string / char* that this slice was derived from
} Clay_StringSlice;
typedef struct Clay_Context Clay_Context;
typedef struct {
    float width, height;
} Clay_Dimensions;
typedef struct {
    float x, y;
} Clay_Vector2;
// Internally clay conventionally represents colors as 0-255, but interpretation
// is up to the renderer.
typedef struct {
    float r, g, b, a;
} Clay_Color;
// Controls various functionality related to text elements.
typedef struct {
    // A pointer that will be transparently passed through to the resulting
    // render command.
    void *userData;
    // The RGBA color of the font to render, conventionally specified as 0-255.
    Clay_Color textColor;
    // An integer transparently passed to Clay_MeasureText to identify the font
    // to use. The debug view will pass fontId = 0 for its internal text.
    uint16_t fontId;
    // Controls the size of the font. Handled by the function provided to
    // Clay_MeasureText.
    uint16_t fontSize;
    // Controls extra horizontal spacing between characters. Handled by the
    // function provided to Clay_MeasureText.
    uint16_t letterSpacing;
    // Controls additional vertical space between wrapped lines of text.
    uint16_t lineHeight;
    // Controls how text "wraps", that is how it is broken into multiple lines
    // when there is insufficient horizontal space. CLAY_TEXT_WRAP_WORDS
    // (default) breaks on whitespace characters. CLAY_TEXT_WRAP_NEWLINES
    // doesn't break on space characters, only on newlines. CLAY_TEXT_WRAP_NONE
    // disables wrapping entirely.
    Clay_TextElementConfigWrapMode wrapMode;
    // Controls how wrapped lines of text are horizontally aligned within the
    // outer text bounding box. CLAY_TEXT_ALIGN_LEFT (default) - Horizontally
    // aligns wrapped lines of text to the left hand side of their bounding box.
    // CLAY_TEXT_ALIGN_CENTER - Horizontally aligns wrapped lines of text to the
    // center of their bounding box. CLAY_TEXT_ALIGN_RIGHT - Horizontally aligns
    // wrapped lines of text to the right hand side of their bounding box.
    Clay_TextAlignment textAlignment;
} Clay_TextElementConfig;
// Image --------------------------------

// Controls various settings related to image elements.
typedef struct {
    void *imageData; // A transparent pointer used to pass image data through to
                     // the renderer.
    Clay_Dimensions sourceDimensions; // The original dimensions of the source
                                      // image, used to control aspect ratio.
} Clay_ImageElementConfig;
// Floating -----------------------------

// Controls where a floating element is offset relative to its parent element.
// Note: see
// https://github.com/user-attachments/assets/b8c6dfaa-c1b1-41a4-be55-013473e4a6ce
// for a visual explanation.
typedef CLAY_PACKED_ENUM{
    CLAY_ATTACH_POINT_LEFT_TOP,      CLAY_ATTACH_POINT_LEFT_CENTER,
    CLAY_ATTACH_POINT_LEFT_BOTTOM,   CLAY_ATTACH_POINT_CENTER_TOP,
    CLAY_ATTACH_POINT_CENTER_CENTER, CLAY_ATTACH_POINT_CENTER_BOTTOM,
    CLAY_ATTACH_POINT_RIGHT_TOP,     CLAY_ATTACH_POINT_RIGHT_CENTER,
    CLAY_ATTACH_POINT_RIGHT_BOTTOM,
} Clay_FloatingAttachPointType;
// Controls where a floating element is offset relative to its parent element.
typedef struct {
    Clay_FloatingAttachPointType
        element; // Controls the origin point on a floating element that
                 // attaches to its parent.
    Clay_FloatingAttachPointType
        parent; // Controls the origin point on the parent element that the
                // floating element attaches to.
} Clay_FloatingAttachPoints;
// Controls how mouse pointer events like hover and click are captured or passed
// through to elements underneath a floating element.
typedef CLAY_PACKED_ENUM{
    // (default) "Capture" the pointer event and don't allow events like hover
    // and click to pass through to elements underneath.
    CLAY_POINTER_CAPTURE_MODE_CAPTURE,
    //    CLAY_POINTER_CAPTURE_MODE_PARENT, TODO pass pointer through to
    //    attached parent

    // Transparently pass through pointer events like hover and click to
    // elements underneath the floating element.
    CLAY_POINTER_CAPTURE_MODE_PASSTHROUGH,
} Clay_PointerCaptureMode;
// Controls which element a floating element is "attached" to (i.e. relative
// offset from).
typedef CLAY_PACKED_ENUM{
    // (default) Disables floating for this element.
    CLAY_ATTACH_TO_NONE,
    // Attaches this floating element to its parent, positioned based on the
    // .attachPoints and .offset fields.
    CLAY_ATTACH_TO_PARENT,
    // Attaches this floating element to an element with a specific ID,
    // specified with the .parentId field. positioned based on the .attachPoints
    // and .offset fields.
    CLAY_ATTACH_TO_ELEMENT_WITH_ID,
    // Attaches this floating element to the root of the layout, which combined
    // with the .offset field provides functionality similar to "absolute
    // positioning".
    CLAY_ATTACH_TO_ROOT,
} Clay_FloatingAttachToElement;
// Controls various settings related to "floating" elements, which are elements
// that "float" above other elements, potentially overlapping their boundaries,
// and not affecting the layout of sibling or parent elements.
typedef struct {
    // Offsets this floating element by the provided x,y coordinates from its
    // attachPoints.
    Clay_Vector2 offset;
    // Expands the boundaries of the outer floating element without affecting
    // its children.
    Clay_Dimensions expand;
    // When used in conjunction with .attachTo = CLAY_ATTACH_TO_ELEMENT_WITH_ID,
    // attaches this floating element to the element in the hierarchy with the
    // provided ID. Hint: attach the ID to the other element with .id =
    // CLAY_ID("yourId"), and specify the id the same way, with .parentId =
    // CLAY_ID("yourId").id
    uint32_t parentId;
    // Controls the z index of this floating element and all its children.
    // Floating elements are sorted in ascending z order before output. zIndex
    // is also passed to the renderer for all elements contained within this
    // floating element.
    int16_t zIndex;
    // Controls how mouse pointer events like hover and click are captured or
    // passed through to elements underneath / behind a floating element. Enum
    // is of the form CLAY_ATTACH_POINT_foo_bar. See Clay_FloatingAttachPoints
    // for more details. Note: see <img
    // src="https://github.com/user-attachments/assets/b8c6dfaa-c1b1-41a4-be55-013473e4a6ce
    // /> and <img
    // src="https://github.com/user-attachments/assets/ebe75e0d-1904-46b0-982d-418f929d1516
    // /> for a visual explanation.
    Clay_FloatingAttachPoints attachPoints;
    // Controls how mouse pointer events like hover and click are captured or
    // passed through to elements underneath a floating element.
    // CLAY_POINTER_CAPTURE_MODE_CAPTURE (default) - "Capture" the pointer event
    // and don't allow events like hover and click to pass through to elements
    // underneath. CLAY_POINTER_CAPTURE_MODE_PASSTHROUGH - Transparently pass
    // through pointer events like hover and click to elements underneath the
    // floating element.
    Clay_PointerCaptureMode pointerCaptureMode;
    // Controls which element a floating element is "attached" to (i.e. relative
    // offset from). CLAY_ATTACH_TO_NONE (default) - Disables floating for this
    // element. CLAY_ATTACH_TO_PARENT - Attaches this floating element to its
    // parent, positioned based on the .attachPoints and .offset fields.
    // CLAY_ATTACH_TO_ELEMENT_WITH_ID - Attaches this floating element to an
    // element with a specific ID, specified with the .parentId field.
    // positioned based on the .attachPoints and .offset fields.
    // CLAY_ATTACH_TO_ROOT - Attaches this floating element to the root of the
    // layout, which combined with the .offset field provides functionality
    // similar to "absolute positioning".
    Clay_FloatingAttachToElement attachTo;
} Clay_FloatingElementConfig;
// Custom -----------------------------

// Controls various settings related to custom elements.
typedef struct {
    // A transparent pointer through which you can pass custom data to the
    // renderer. Generates CUSTOM render commands.
    void *customData;
} Clay_CustomElementConfig;
// Scroll -----------------------------

// Controls the axis on which an element switches to "scrolling", which clips
// the contents and allows scrolling in that direction.
typedef struct {
    bool horizontal; // Clip overflowing elements on the X axis and allow
                     // scrolling left and right.
    bool vertical;   // Clip overflowing elements on the YU axis and allow
                     // scrolling up and down.
} Clay_ScrollElementConfig;
// Border -----------------------------

// Controls the widths of individual element borders.
typedef struct {
    uint16_t left;
    uint16_t right;
    uint16_t top;
    uint16_t bottom;
    // Creates borders between each child element, depending on the
    // .layoutDirection. e.g. for LEFT_TO_RIGHT, borders will be vertical lines,
    // and for TOP_TO_BOTTOM borders will be horizontal lines. .betweenChildren
    // borders will result in individual RECTANGLE render commands being
    // generated.
    uint16_t betweenChildren;
} Clay_BorderWidth;
// Controls settings related to element borders.
typedef struct {
    Clay_Color color; // Controls the color of all borders with width > 0.
                      // Conventionally represented as 0-255, but interpretation
                      // is up to the renderer.
    Clay_BorderWidth width; // Controls the widths of individual borders. At
                            // least one of these should be > 0 for a BORDER
                            // render command to be generated.
} Clay_BorderElementConfig;
// Render Command Data -----------------------------

// Render command data when commandType == CLAY_RENDER_COMMAND_TYPE_TEXT
typedef struct {
    // A string slice containing the text to be rendered.
    // Note: this is not guaranteed to be null terminated.
    Clay_StringSlice stringContents;
    // Conventionally represented as 0-255 for each channel, but interpretation
    // is up to the renderer.
    Clay_Color textColor;
    // An integer representing the font to use to render this text,
    // transparently passed through from the text declaration.
    uint16_t fontId;
    uint16_t fontSize;
    // Specifies the extra whitespace gap in pixels between each character.
    uint16_t letterSpacing;
    // The height of the bounding box for this line of text.
    uint16_t lineHeight;
} Clay_TextRenderData;
// Binds a callback function that Clay will call to determine the dimensions of
// a given string slice.
// - measureTextFunction is a user provided function that adheres to the
// interface Clay_Dimensions (Clay_StringSlice text, Clay_TextElementConfig
// *config, void *userData);
// - userData is a pointer that will be transparently passed through when the
// measureTextFunction is called.
CLAY_DLL_EXPORT void Clay_SetMeasureTextFunction(
    Clay_Dimensions (*measureTextFunction)(Clay_StringSlice text,
                                           Clay_TextElementConfig *config,
                                           void *userData),
    void *userData);
// Experimental - Used in cases where Clay needs to integrate with a system that
// manages its own scrolling containers externally. Please reach out if you plan
// to use this function, as it may be subject to change.
CLAY_DLL_EXPORT void Clay_SetQueryScrollOffsetFunction(
    Clay_Vector2 (*queryScrollOffsetFunction)(uint32_t elementId,
                                              void *userData),
    void *userData);
Clay_Dimensions (*Clay__MeasureText)(Clay_StringSlice text,
                                     Clay_TextElementConfig *config,
                                     void *userData);
Clay_Vector2 (*Clay__QueryScrollOffset)(uint32_t elementId, void *userData);
void Clay_SetMeasureTextFunction(
    Clay_Dimensions (*measureTextFunction)(Clay_StringSlice text,
                                           Clay_TextElementConfig *config,
                                           void *userData),
    void *userData) {
    Clay_Context *context = Clay_GetCurrentContext();
    Clay__MeasureText = measureTextFunction;
    context->measureTextUserData = userData;
}
void Clay_SetQueryScrollOffsetFunction(
    Clay_Vector2 (*queryScrollOffsetFunction)(uint32_t elementId,
                                              void *userData),
    void *userData) {
    Clay_Context *context = Clay_GetCurrentContext();
    Clay__QueryScrollOffset = queryScrollOffsetFunction;
    context->queryScrollOffsetUserData = userData;
}