src/bindings/clay.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay__Clay_TextElementConfigWrapper"]
        [::std::mem::size_of::<Clay__Clay_TextElementConfigWrapper>() - 40usize];
    ["Alignment of Clay__Clay_TextElementConfigWrapper"]
        [::std::mem::align_of::<Clay__Clay_TextElementConfigWrapper>() - 8usize];
    ["Offset of field: Clay__Clay_TextElementConfigWrapper::wrapped"]
        [::std::mem::offset_of!(Clay__Clay_TextElementConfigWrapper, wrapped) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_ImageElementConfig {
    pub imageData: *mut ::std::os::raw::c_void,
    pub sourceDimensions: Clay_Dimensions,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_ImageElementConfig"][::std::mem::size_of::<Clay_ImageElementConfig>() - 16usize];
    ["Alignment of Clay_ImageElementConfig"][::std::mem::align_of::<Clay_ImageElementConfig>() - 8usize];
    ["Offset of field: Clay_ImageElementConfig::imageData"]
        [::std::mem::offset_of!(Clay_ImageElementConfig, imageData) - 0usize];
    ["Offset of field: Clay_ImageElementConfig::sourceDimensions"]
        [::std::mem::offset_of!(Clay_ImageElementConfig, sourceDimensions) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay__Clay_ImageElementConfigWrapper {
    pub wrapped: Clay_ImageElementConfig,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay__Clay_ImageElementConfigWrapper"]
        [::std::mem::size_of::<Clay__Clay_ImageElementConfigWrapper>() - 16usize];
    ["Alignment of Clay__Clay_ImageElementConfigWrapper"]
        [::std::mem::align_of::<Clay__Clay_ImageElementConfigWrapper>() - 8usize];
    ["Offset of field: Clay__Clay_ImageElementConfigWrapper::wrapped"]
        [::std::mem::offset_of!(Clay__Clay_ImageElementConfigWrapper, wrapped) - 0usize];
};
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_LEFT_TOP: Clay_FloatingAttachPointType = 0;
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_LEFT_CENTER: Clay_FloatingAttachPointType = 1;
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_LEFT_BOTTOM: Clay_FloatingAttachPointType = 2;
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_CENTER_TOP: Clay_FloatingAttachPointType = 3;
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_CENTER_CENTER: Clay_FloatingAttachPointType = 4;
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_CENTER_BOTTOM: Clay_FloatingAttachPointType = 5;
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_RIGHT_TOP: Clay_FloatingAttachPointType = 6;
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_RIGHT_CENTER: Clay_FloatingAttachPointType = 7;
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_RIGHT_BOTTOM: Clay_FloatingAttachPointType = 8;
pub type Clay_FloatingAttachPointType = ::std::os::raw::c_uchar;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_FloatingAttachPoints {
    pub element: Clay_FloatingAttachPointType,
    pub parent: Clay_FloatingAttachPointType,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_FloatingAttachPoints"][::std::mem::size_of::<Clay_FloatingAttachPoints>() - 2usize];
    ["Alignment of Clay_FloatingAttachPoints"][::std::mem::align_of::<Clay_FloatingAttachPoints>() - 1usize];
    ["Offset of field: Clay_FloatingAttachPoints::element"]
        [::std::mem::offset_of!(Clay_FloatingAttachPoints, element) - 0usize];
    ["Offset of field: Clay_FloatingAttachPoints::parent"]
        [::std::mem::offset_of!(Clay_FloatingAttachPoints, parent) - 1usize];
};
pub const Clay_PointerCaptureMode_CLAY_POINTER_CAPTURE_MODE_CAPTURE: Clay_PointerCaptureMode = 0;
pub const Clay_PointerCaptureMode_CLAY_POINTER_CAPTURE_MODE_PASSTHROUGH: Clay_PointerCaptureMode = 1;
pub type Clay_PointerCaptureMode = ::std::os::raw::c_uchar;
pub const Clay_FloatingAttachToElement_CLAY_ATTACH_TO_NONE: Clay_FloatingAttachToElement = 0;
pub const Clay_FloatingAttachToElement_CLAY_ATTACH_TO_PARENT: Clay_FloatingAttachToElement = 1;
pub const Clay_FloatingAttachToElement_CLAY_ATTACH_TO_ELEMENT_WITH_ID: Clay_FloatingAttachToElement = 2;
pub const Clay_FloatingAttachToElement_CLAY_ATTACH_TO_ROOT: Clay_FloatingAttachToElement = 3;
pub type Clay_FloatingAttachToElement = ::std::os::raw::c_uchar;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_FloatingElementConfig {
    pub offset: Clay_Vector2,
    pub expand: Clay_Dimensions,
    pub parentId: u32,
    pub zIndex: i16,
    pub attachPoints: Clay_FloatingAttachPoints,
    pub pointerCaptureMode: Clay_PointerCaptureMode,
    pub attachTo: Clay_FloatingAttachToElement,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_FloatingElementConfig"][::std::mem::size_of::<Clay_FloatingElementConfig>() - 28usize];
    ["Alignment of Clay_FloatingElementConfig"][::std::mem::align_of::<Clay_FloatingElementConfig>() - 4usize];
    ["Offset of field: Clay_FloatingElementConfig::offset"]
        [::std::mem::offset_of!(Clay_FloatingElementConfig, offset) - 0usize];
    ["Offset of field: Clay_FloatingElementConfig::expand"]
        [::std::mem::offset_of!(Clay_FloatingElementConfig, expand) - 8usize];
    ["Offset of field: Clay_FloatingElementConfig::parentId"]
        [::std::mem::offset_of!(Clay_FloatingElementConfig, parentId) - 16usize];
    ["Offset of field: Clay_FloatingElementConfig::zIndex"]
        [::std::mem::offset_of!(Clay_FloatingElementConfig, zIndex) - 20usize];
    ["Offset of field: Clay_FloatingElementConfig::attachPoints"]
        [::std::mem::offset_of!(Clay_FloatingElementConfig, attachPoints) - 22usize];
    ["Offset of field: Clay_FloatingElementConfig::pointerCaptureMode"]
        [::std::mem::offset_of!(Clay_FloatingElementConfig, pointerCaptureMode) - 24usize];
    ["Offset of field: Clay_FloatingElementConfig::attachTo"]
        [::std::mem::offset_of!(Clay_FloatingElementConfig, attachTo) - 25usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay__Clay_FloatingElementConfigWrapper {
    pub wrapped: Clay_FloatingElementConfig,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay__Clay_FloatingElementConfigWrapper"]
        [::std::mem::size_of::<Clay__Clay_FloatingElementConfigWrapper>() - 28usize];
    ["Alignment of Clay__Clay_FloatingElementConfigWrapper"]
        [::std::mem::align_of::<Clay__Clay_FloatingElementConfigWrapper>() - 4usize];
    ["Offset of field: Clay__Clay_FloatingElementConfigWrapper::wrapped"]
        [::std::mem::offset_of!(Clay__Clay_FloatingElementConfigWrapper, wrapped) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_CustomElementConfig {
    pub customData: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_CustomElementConfig"][::std::mem::size_of::<Clay_CustomElementConfig>() - 8usize];
    ["Alignment of Clay_CustomElementConfig"][::std::mem::align_of::<Clay_CustomElementConfig>() - 8usize];
    ["Offset of field: Clay_CustomElementConfig::customData"]
        [::std::mem::offset_of!(Clay_CustomElementConfig, customData) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay__Clay_CustomElementConfigWrapper {
    pub wrapped: Clay_CustomElementConfig,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay__Clay_CustomElementConfigWrapper"]
        [::std::mem::size_of::<Clay__Clay_CustomElementConfigWrapper>() - 8usize];
    ["Alignment of Clay__Clay_CustomElementConfigWrapper"]
        [::std::mem::align_of::<Clay__Clay_CustomElementConfigWrapper>() - 8usize];
    ["Offset of field: Clay__Clay_CustomElementConfigWrapper::wrapped"]
        [::std::mem::offset_of!(Clay__Clay_CustomElementConfigWrapper, wrapped) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_ScrollElementConfig {
    pub horizontal: bool,
    pub vertical: bool,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_ScrollElementConfig"][::std::mem::size_of::<Clay_ScrollElementConfig>() - 2usize];
    ["Alignment of Clay_ScrollElementConfig"][::std::mem::align_of::<Clay_ScrollElementConfig>() - 1usize];
    ["Offset of field: Clay_ScrollElementConfig::horizontal"]
        [::std::mem::offset_of!(Clay_ScrollElementConfig, horizontal) - 0usize];
    ["Offset of field: Clay_ScrollElementConfig::vertical"]
        [::std::mem::offset_of!(Clay_ScrollElementConfig, vertical) - 1usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay__Clay_ScrollElementConfigWrapper {
    pub wrapped: Clay_ScrollElementConfig,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay__Clay_ScrollElementConfigWrapper"]
        [::std::mem::size_of::<Clay__Clay_ScrollElementConfigWrapper>() - 2usize];
    ["Alignment of Clay__Clay_ScrollElementConfigWrapper"]
        [::std::mem::align_of::<Clay__Clay_ScrollElementConfigWrapper>() - 1usize];
    ["Offset of field: Clay__Clay_ScrollElementConfigWrapper::wrapped"]
        [::std::mem::offset_of!(Clay__Clay_ScrollElementConfigWrapper, wrapped) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_BorderWidth {
    pub left: u16,
    pub right: u16,
    pub top: u16,
    pub bottom: u16,
    pub betweenChildren: u16,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_BorderWidth"][::std::mem::size_of::<Clay_BorderWidth>() - 10usize];
    ["Alignment of Clay_BorderWidth"][::std::mem::align_of::<Clay_BorderWidth>() - 2usize];
    ["Offset of field: Clay_BorderWidth::left"][::std::mem::offset_of!(Clay_BorderWidth, left) - 0usize];
    ["Offset of field: Clay_BorderWidth::right"][::std::mem::offset_of!(Clay_BorderWidth, right) - 2usize];
    ["Offset of field: Clay_BorderWidth::top"][::std::mem::offset_of!(Clay_BorderWidth, top) - 4usize];
    ["Offset of field: Clay_BorderWidth::bottom"][::std::mem::offset_of!(Clay_BorderWidth, bottom) - 6usize];
    ["Offset of field: Clay_BorderWidth::betweenChildren"]
        [::std::mem::offset_of!(Clay_BorderWidth, betweenChildren) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_BorderElementConfig {
    pub color: Clay_Color,
    pub width: Clay_BorderWidth,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_BorderElementConfig"][::std::mem::size_of::<Clay_BorderElementConfig>() - 28usize];
    ["Alignment of Clay_BorderElementConfig"][::std::mem::align_of::<Clay_BorderElementConfig>() - 4usize];
    ["Offset of field: Clay_BorderElementConfig::color"]
        [::std::mem::offset_of!(Clay_BorderElementConfig, color) - 0usize];
    ["Offset of field: Clay_BorderElementConfig::width"]
        [::std::mem::offset_of!(Clay_BorderElementConfig, width) - 16usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay__Clay_BorderElementConfigWrapper {
    pub wrapped: Clay_BorderElementConfig,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay__Clay_BorderElementConfigWrapper"]
        [::std::mem::size_of::<Clay__Clay_BorderElementConfigWrapper>() - 28usize];
    ["Alignment of Clay__Clay_BorderElementConfigWrapper"]
        [::std::mem::align_of::<Clay__Clay_BorderElementConfigWrapper>() - 4usize];
    ["Offset of field: Clay__Clay_BorderElementConfigWrapper::wrapped"]
        [::std::mem::offset_of!(Clay__Clay_BorderElementConfigWrapper, wrapped) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_TextRenderData {
    pub stringContents: Clay_StringSlice,
    pub textColor: Clay_Color,
    pub fontId: u16,
    pub fontSize: u16,
    pub letterSpacing: u16,
    pub lineHeight: u16,
}
